# ai-agentic-karate-testing

./: .env.example  .gitignore  MVP_Implementation_Plan.md  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/: feature_validator.py  feature_writer.py  graph.py  result_analyzer.py  scenario_generator.py  state.py
agents/prompts/: feature_writing.py  result_analysis.py  scenario_generation.py
cli/: app.py
config/: karate_project.yaml  logging_config.py  settings.py
data/karate_syntax_examples/: examples.feature
data/sample_features/: orders-crud.feature  orders-data-driven.feature
data/sample_source/: OrderController.java  OrderService.java
data/sample_specs/: orders-api.yaml
db/: init.sql
docs/: architecture.md  demo_script.md  presentation.html  setup_guide.md  speaker_notes.md
executor/: __init__.py  report_parser.py  runner.py
ingestion/: base_adapter.py  db_schema_adapter.py  existing_tests_adapter.py  openapi_adapter.py  project_context_adapter.py  source_code_adapter.py  test_data_reader.py
karate_project/: pom.xml
metrics/: __init__.py  collector.py  generation_log.jsonl
rag/: chunking.py  embeddings.py  reranker.py  retriever.py  vector_store.py
tests/test_agents/: test_feature_validator.py  test_feature_writer.py  test_graph.py  test_scenario_generator.py
tests/test_ingestion/: test_data_reader.py  test_db_schema_adapter.py  test_existing_tests_adapter.py  test_openapi_adapter.py  test_project_context_adapter.py  test_source_code_adapter.py
tests/test_rag/: test_retriever.py  test_vector_store.py
(+63 files in other folders)
